# chameleon-backend

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  MANIFEST.in  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: renovate.json
.github/workflows/: python-pre-commit.yml  python-unit-tests.yml  renovate-validate.yml  wait-for-checks.yml
chameleon/api/: chameleon.py  comment.py  error.py  project.py  ticket.py  urls.py
chameleon/application/: __main__.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
chameleon/application/json/: apps.py
chameleon/common/: __init__.py  chameleon_app.py  enums.py  fields.py  models.py  query.py  transaction.py
chameleon/common/app/: autoname.py
chameleon/common/django/: __init__.py  chameleon_app.py  models.py  query.py  transaction.py
chameleon/common/django/fields/: __init__.py
chameleon/common/fields/: __init__.py  choice.py
chameleon/history/: mapping.py  models.py  utils.py
chameleon/project/comment/: api.py  apps.py  mapping.py  models.py  validation.py
chameleon/project/comment/migrations/: 0001_initial.py
chameleon/project/project/: api.py  apps.py  mapping.py  models.py
chameleon/project/project/migrations/: 0001_initial.py  0002_chameleonprojecthistory.py  0003_chameleonproject_creation_time.py  0004_alter_chameleonproject_creation_time.py  0005_alter_chameleonproject_options.py  0006_chameleonproject_name.py  0007_alter_chameleonproject_name.py  0008_rename_title_chameleonproject_summary.py
chameleon/project/ticket/: api.py  apps.py  mapping.py  models.py  validation.py
chameleon/project/ticket/migrations/: 0001_initial.py  0002_alter_chameleonticket_options.py
chameleon/step/core/: __init__.py  context.py  core.py  doc.py  multi.py  registry.py  tools.py
chameleon/step/framework/: steps_django.py
chameleon/step/framework/django/: __init__.py
chameleon/step/mapping/: __init__.py  datetime.py  simple.py
chameleon/step/steps/: __init__.py  mapping.py  steps_default.py  steps_json.py  validation.py
chameleon/step/validation/: __init__.py  jsonschema.py
schemas/: api_project.yml  schema.yml  schema_comment.yml  schema_common.yml  schema_project.yml  schema_ticket.yml
schemas/openapi/: api_comment.yml  api_project.yml  api_ticket.yml
src/: manage.py
src/chameleon/: db.sqlite3
src/chameleon/api/: project.py  urls.py
src/chameleon/application/: apps.py  settings.py  urls.py  wsgi.py
src/chameleon/common/: __init__.py  chameleon_app.py  enums.py  fields.py  models.py
src/chameleon/common/app/: autoname.py
src/chameleon/project/project/: admin.py  api.py  mapping.py  models.py  validation.py
src/chameleon/project/project/migrations/: 0001_initial.py
src/chameleon/project/ticket/: admin.py  apps.py  models.py
src/chameleon/project/ticket/migrations/: 0001_initial.py
src/chameleon/step/core/: __init__.py  context.py  core.py  doc.py  multi.py  registry.py  tools.py
src/chameleon/step/framework/: django.py
src/chameleon/step/framework/django/: __init__.py  apps.py
src/chameleon/step/impl/: __init__.py  django.py  impl.py  jjson.py  mapping.py  validation.py
src/chameleon/step/impl/registry/: __init__.py  mapper_registry.py  registry.py  schema_loader.py  validator_registry.py
src/chameleon/step/jsonschema/: loader.py  registry.py
src/chameleon/step/mapping/: simple.py
src/chameleon/step/registry/: __init__.py  mapper_registry.py  schema_loader.py  validator_registry.py
src/chameleon/step/steps/: __init__.py  mapping.py  steps_default.py  steps_json.py  validation.py
src/chameleon/step/validation/: jsonschema.py
tests/step/core/: test_core.py  test_multi.py
