[metadata]
name = chameleon-tracker
version = attr: chameleon.__version__
author = Eir Nym
description = A ticket tracker
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: ASGI

[options]
python_requires = >=3.12
packages = find:
include_package_data = false
zip_safe = false
install_requires =
    # Web framework in use
    Django >= 5.0.0, <5.1.0
    # JSON Schema verification
    jsonschema >= 4.17.0, < 5.0.0
    rfc3339-validator >= 0.1.4, <= 1.0.0
    isoduration >= 20.11.0, < 21.0.0
    # Reading YAML schema files
    PyYaml >= 6.0.0, < 7.0.0

[options.entry_points]
console_scripts =
    chameleon-tracker = chameleon.application.__main__:main

[options.extras_require]
test = pytest-asyncio >= 0.23.2, < 1.0.0
qa = pre-commit >= 3.6.0, < 4.0.0

[flake8]
exclude = build,.git,.tox,./tests/.env
max-line-length = 88

[isort]
profile = black
known_first_party = chameleon
force_single_line = true
force_alphabetical_sort_within_sections = true
