[metadata]
name = chameleon_tracker
version = attr: chameleon.__version__
description = A ticket tracker
author = Eir Nym
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: ASGI
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI

[options]
install_requires =
    Django>=5.2,<5.3
    PyYaml>=6.0.1,<7.0.0
    isoduration>=20.11.0,<21.0.0
    jsonschema>=4.20.0,<5.0.0
    orjson>=3.9.10,<4.0.0
    rfc3339-validator>=0.1.4,<=1.0.0
python_requires = >=3.12
data_packages =
    chameleon.schemas
include_package_data = true
package_dir =
    chameleon = chameleon
    chameleon.schemas = schemas

[options.entry_points]
console_scripts =
    chameleon-tracker = chameleon.application.__main__:main

[options.extras_require]
qa =
    pre-commit>=4.5.1,<4.6.0
test =
    pytest-asyncio>=1.0.0,<1.1.0

[options.package_data]
chameleon.schemas = schemas

[flake8]
ignore = E203,W503,E701,E704
exclude =
    .git/,
    .tox/,
    __pycache__/,
    build/,
    dist/,
    ./tests/.env/,
    *.egg-info/,
max-line-length = 88

[isort]
profile = black
known_first_party = chameleon
force_single_line = true
force_alphabetical_sort_within_sections = true

[mypy]
exclude = (?x)(
    ^\.git/
    | ^\.tox/
    | ^__pycache__/
    | ^build/
    | ^dist/
    | ^tests/^\.env/
    | ^.*\.egg-info/
    )
